# car-marketplace

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  asgi.py  local.yml  pyproject.toml
bash/: run_web.sh
containers/: __init__.py  base.py  web.py
envs/: web_env.example
factories/: app.py
src/: di.py  settings.py
src/api/auth/: __init__.py  jwt_verification.py  utils.py
src/errors/: base_error.py  error_handler.py
src/errors/repository/: __init__.py  errors.py
src/errors/services/: __init__.py  errors.py
src/infrastructure/: db.py  unit_of_work.py
src/infrastructure/migrations/: env.py
src/infrastructure/supabase/: __init__.py  auth_user.py  client.py
src/infrastructure/tables/: meta_table.py
src/interfaces/: __init__.py  unit_of_work.py
src/interfaces/services/: auth.py  cars.py  users.py
src/models/: utils.py
src/models/cars/: __init__.py  filters.py  models.py  repositories.py
src/models/common/: filters.py  models.py  repositories.py
src/models/users/: __init__.py  filters.py  models.py  repositories.py
src/services/auth/: __init__.py  services.py
src/services/cars/: __init__.py  services.py
src/services/users/: __init__.py  services.py
src/use_cases/auth/: dto.py  refresh_session.py  sign_in.py  sign_up.py
src/use_cases/cars/: create_brand.py  create_car.py  create_series.py  drop_car.py  dto.py  update_brand.py  update_car.py  update_series.py  view_brands.py  view_car.py  view_cars.py  view_series.py
src/use_cases/users/: drop_user.py  dto.py  view_user.py  view_users.py
(+39 files in other folders)
