[tool.poetry]
name = "car-marketplace"
version = "0.1.0"
description = "Car Marketplace"
authors = ["vladyslavkolomoiets <vladyslav.kolomoiets7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
pydantic-settings = "^2.2.1"
supabase-py-async = "^2.5.6"
sqlalchemy = "^2.0.29"
python-jose = "^3.3.0"
dependency-injector = "^4.41.0"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
pre-commit = "^3.7.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
